--- a/NNZFSC/Views/Home/Index.cshtml
+++ b/NNZFSC/Views/Home/Index.cshtml
@@ -1,31 +1,245 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Nepal New Zealand Friendship Society of Canterbury</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link href="~/Content/style.css" rel="stylesheet" />
+</head>
+<body>
+    <!-- Navigation -->
+  
+    <!--- Image Slider -->
+    <div id="slides" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+            <li data-target="#slides" data-slide-to="0" class="active"></li>
+            <li data-target="#slides" data-slide-to="1"></li>
+            <li data-target="#slides" data-slide-to="2"></li>
+        </ul>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/nnzfsc_cover.jpg">
+                <div class="carousel-caption">
+                    <h1 class="display-2">NNZFSC</h1>
+                    <h3>Nepal New Zealand Friendship Society of Canterbury</h3>
+                    <!--	<button type="button" class="btn btn-outline-light btn-lg">View Member </button>
+                        <button type="button" class="btn btn-primary btn-lg"> </button> -->
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/nnzfsc_cover.jpg">
+            </div>
+            <div class="carousel-item">
+                <img src="img/nnzfsc_cover_1.jpg">
+            </div>
+        </div>
+    </div>
+    <!--- Jumbotron -->
+    <div class="container-fluid">
+        <div class="row jumbotron">
+            <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+                <h3>Welcome to Nepal New Zealand Friendship Society</h3>
+                <p class="lead">
+                    The society aims to introduce and promote Nepalese culture and traditions in New Zealand. The society keeps in contact with local government and members of different ethnic council of Christchurch..
+                </p>
+            </div>
+            <!--<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+                <a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Web Hosting
+                </button></a>
+            </div> -->
+        </div>
+        <!--- Welcome Section -->
+        <div class="container-fluid padding">
+            <div class="row welcome text-center">
+                <div class="col-12">
+                    <h1 class="display-4">Activities </h1>
+                </div>
+                <hr>
+                <div class="col-12">
+                    <p class="lead">
+                    </p>
+                </div>
+            </div>
+        </div>
 </div>
+        <!--- Three Column Section -->
+        <div class="container-fluid padding">
+            <div class="row text-center padding">
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <i class="fas fa-code"></i>
+                    <h3>Gorkahali Football Club</h3>
+                    <p>The Gorkhali Football Club promotes football within the Nepalese communities </p>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <i class="fas fa-bold"></i>
+                    <h3>Everst Cricket Club</h3>
+                    <p>Everest Cricket Club is associated with NNZFSC (Nepal New Zealand Friendship Society of Canterbury)</p>
+                </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+                <div class="col-xs-12 col-md-4">
+                    <i class="fab fa-css3"></i>
+                    <h3>Integrated Activities</h3>
+                    <p>We are happy to announce that all the recreational activities has been successfully integrated </p>
+                </div>
+
+            </div>
+            <hr class="my-4">
+        </div>
+
+        <!--- Two Column Section -->
+        <div class="container-fluid padding">
+            <div class="row padding">
+                <div class="col-md-12 col-lg-12">
+                    <h2>Recent News</h2>
+                    <h4>Annual General Meeting (AGM) 2018</h4>
+                    <p>
+
+                        AGM was held in 1st of April ,2018 at Fendalton Community Center. NNZFSC would like to thank everyone, for attending the annual general meeting. We also would like to praise the work and effort put in place by our election committee.
+                    </p>
+                    <p>
+                        As of election result, we would like to congratulate and wish on behalf of the outgoing executive committee to the newly elected executive team for successful tenure to come. NNZFSC Excom 2016-2018
+                    </p>
+
+                    <a href="#" class="btn btn-primary">Read More </a>
+                </div>
+
+                <div class="col-md-12 col-lg-12">
+
+                    <h4>Appeal for donations to help affected people in recent flooding in Nepal</h4>
+                    <p>
+
+                        As we all know by now, various parts of Nepal is hit hard by the floods and landslides triggered by incessant torrential rainfall recently. Jhapa, Sunsari, Morang, Saptari, Sarlahi, bara, Makawanpur, Sindhuli, Chitwan, Rautahat, Shanusa, Dang, Banke, Bardiya, and Surkhet are worst hit districts.
+                    </p>
+                    <p>
+                        As of election result, we would like to congratulate and wish on behalf of the outgoing executive committee to the newly elected executive team for successful tenure to come. NNZFSC Excom 2016-2018
+                    </p>
+
+                    <a href="#" class="btn btn-primary">Read More </a>
+                </div>
+
+
+                <!--<div class="col-lg-6">
+                    <img src="img/desk.png" class="img-fluid">
+                </div>-->
+            </div>
+        </div>
+        <hr class="my-4">
+        <!--- Fixed background -->
+        <figure>
+            <div class="fixed-wrap">
+                <div id="fixed">
+                </div>
+            </div>
+        </figure>
+
+        <!--- Emoji Section -->
+        <button class="fun" data-toggle="collapse" data-target="#emoji">Click for Upcomming Events </button>
+        <div id="emoji" class="collapse">
+            <div class="container-fluid padding">
+                <div class="row text-center">
+                    <div class="col-sm-6 col-md-3">
+                        <img class="gif" src="img/gif/panda.gif">
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <img class="gif" src="img/gif/poo.gif">
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <img class="gif" src="img/gif/unicorn.gif">
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <img class="gif" src="img/gif/chicken.gif">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!--- Meet the team -->
+        <div class="container-fluid padding">
+            <div class="row welcome text-center">
+                <div class="col-12">
+                    <h1 class="display-4">NNZFSC </h1>
+                </div>
+                <hr>
+            </div>
+        </div>
+        <!--- Cards -->
+        <div class="container-fluid padding">
+            <div class="row padding">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img class="card-img-top" src="img/Namaste2018Cover.png">
+                        <div clas="card-body">
+                            <h4 class="card-title">Namaste Nepal - Magazine : Issue 11 </h4>
+                            <p class="card-text"> NNZFSC is pleased to announce the publication of 11th edition of Namaste Nepal Magazine on 1 April, 2018 </p>
+                            <a href="#" class="btn btn-outline-secondary">Click here to read the 2018 publication. </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card">
+                        <img class="card-img-top" src="img/NewYearFinalPoster.jpg">
+                        <div clas="card-body">
+                            <h4 class="card-title">Nepali New Year 2075 B.S </h4>
+                            <p class="card-text"> Nepali New year is just around the corner. This year we will be celebrating it on Nepali New Year's Eve day which is 13th April 2018 and will be doing the countdown together to welcome a fresh year! We hope all of you will be a part of this celebrations</p>
+                            <a href="#" class="btn btn-outline-secondary">Read More </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card">
+                        <img class="card-img-top" src="img/Thcup.png">
+                        <div clas="card-body">
+                            <h4 class="card-title">TENZING HILLARY CUP AND YUWA SAANJH 2018 </h4>
+                            <p class="card-text"> The time has come again for the biggest Nepalese sporting event in NZ. This Inter Nepalese Football Tournament has been renamed as Tenzing-Hillary Cup since last year.</p>
+                            <a href="#" class="btn btn-outline-secondary">Read More </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!--- Two Column Section -->
+        <!--- Connect -->
+        <div class="container-fluid padding">
+            <div class="row text-center padding">
+                <div class="col-12">
+                    <h2>Connect </h2>
+                </div>
+                <div class="col-12 social padding">
+                    <a href="#" <i class= "fab fa-facebook"></i></a>
+                    <a href="#" <i class= "fab fa-twitter"></i></a>
+                    <a href="#" <i class= "fab fa-google-plus-g"></i></a>
+                    <a href="#" <i class= "fab fa-instagram"></i></a>
+                    <a href="#" <i class= "fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+        <!--- Footer -->
+        <footer>
+            <div class="container-fluid padding">
+                <div class="row text-center">
+
+                    <div class="col-12">
+                        <hr class="light">
+                        <h5>&copy; created and design by Avi Acharya</h5>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
+</body>
+</html>
+
+
+
+
+
+
