--- a/NNZFSC/Views/Home/Index.cshtml
+++ b/NNZFSC/Views/Home/Index.cshtml
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nepal New Zealand Friendship Society of Canterbury</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-3.3.1.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link href="~/Content/style.css" rel="stylesheet" />
+
 </head>
 <body>
     <!-- Navigation -->
-  
     <!--- Image Slider -->
     <div id="slides" class="carousel slide" data-ride="carousel">
         <ul class="carousel-indicators">
@@ -66,175 +66,175 @@
                 </div>
             </div>
         </div>
-</div>
-        <!--- Three Column Section -->
-        <div class="container-fluid padding">
-            <div class="row text-center padding">
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <i class="fas fa-code"></i>
-                    <h3>Gorkahali Football Club</h3>
-                    <p>The Gorkhali Football Club promotes football within the Nepalese communities </p>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <i class="fas fa-bold"></i>
-                    <h3>Everst Cricket Club</h3>
-                    <p>Everest Cricket Club is associated with NNZFSC (Nepal New Zealand Friendship Society of Canterbury)</p>
-                </div>
-
-                <div class="col-xs-12 col-md-4">
-                    <i class="fab fa-css3"></i>
-                    <h3>Integrated Activities</h3>
-                    <p>We are happy to announce that all the recreational activities has been successfully integrated </p>
-                </div>
-
+    </div>
+    <!--- Three Column Section -->
+    <div class="container-fluid padding">
+        <div class="row text-center padding">
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <i class="fas fa-code"></i>
+                <h3>Gorkahali Football Club</h3>
+                <p>The Gorkhali Football Club promotes football within the Nepalese communities </p>
             </div>
-            <hr class="my-4">
-        </div>
-
-        <!--- Two Column Section -->
-        <div class="container-fluid padding">
-            <div class="row padding">
-                <div class="col-md-12 col-lg-12">
-                    <h2>Recent News</h2>
-                    <h4>Annual General Meeting (AGM) 2018</h4>
-                    <p>
-
-                        AGM was held in 1st of April ,2018 at Fendalton Community Center. NNZFSC would like to thank everyone, for attending the annual general meeting. We also would like to praise the work and effort put in place by our election committee.
-                    </p>
-                    <p>
-                        As of election result, we would like to congratulate and wish on behalf of the outgoing executive committee to the newly elected executive team for successful tenure to come. NNZFSC Excom 2016-2018
-                    </p>
-
-                    <a href="#" class="btn btn-primary">Read More </a>
-                </div>
-
-                <div class="col-md-12 col-lg-12">
-
-                    <h4>Appeal for donations to help affected people in recent flooding in Nepal</h4>
-                    <p>
-
-                        As we all know by now, various parts of Nepal is hit hard by the floods and landslides triggered by incessant torrential rainfall recently. Jhapa, Sunsari, Morang, Saptari, Sarlahi, bara, Makawanpur, Sindhuli, Chitwan, Rautahat, Shanusa, Dang, Banke, Bardiya, and Surkhet are worst hit districts.
-                    </p>
-                    <p>
-                        As of election result, we would like to congratulate and wish on behalf of the outgoing executive committee to the newly elected executive team for successful tenure to come. NNZFSC Excom 2016-2018
-                    </p>
-
-                    <a href="#" class="btn btn-primary">Read More </a>
-                </div>
-
-
-                <!--<div class="col-lg-6">
-                    <img src="img/desk.png" class="img-fluid">
-                </div>-->
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <i class="fas fa-bold"></i>
+                <h3>Everst Cricket Club</h3>
+                <p>Everest Cricket Club is associated with NNZFSC (Nepal New Zealand Friendship Society of Canterbury)</p>
             </div>
+
+            <div class="col-xs-12 col-md-4">
+                <i class="fab fa-css3"></i>
+                <h3>Integrated Activities</h3>
+                <p>We are happy to announce that all the recreational activities has been successfully integrated </p>
+            </div>
+
         </div>
         <hr class="my-4">
-        <!--- Fixed background -->
-        <figure>
-            <div class="fixed-wrap">
-                <div id="fixed">
-                </div>
+    </div>
+
+    <!--- Two Column Section -->
+    <div class="container-fluid padding">
+        <div class="row padding">
+            <div class="col-md-12 col-lg-12">
+                <h2>Recent News</h2>
+                <h4>Annual General Meeting (AGM) 2018</h4>
+                <p>
+
+                    AGM was held in 1st of April ,2018 at Fendalton Community Center. NNZFSC would like to thank everyone, for attending the annual general meeting. We also would like to praise the work and effort put in place by our election committee.
+                </p>
+                <p>
+                    As of election result, we would like to congratulate and wish on behalf of the outgoing executive committee to the newly elected executive team for successful tenure to come. NNZFSC Excom 2016-2018
+                </p>
+
+                <a href="#" class="btn btn-primary">Read More </a>
             </div>
-        </figure>
 
-        <!--- Emoji Section -->
-        <button class="fun" data-toggle="collapse" data-target="#emoji">Click for Upcomming Events </button>
-        <div id="emoji" class="collapse">
-            <div class="container-fluid padding">
-                <div class="row text-center">
-                    <div class="col-sm-6 col-md-3">
-                        <img class="gif" src="img/gif/panda.gif">
-                    </div>
-                    <div class="col-sm-6 col-md-3">
-                        <img class="gif" src="img/gif/poo.gif">
-                    </div>
-                    <div class="col-sm-6 col-md-3">
-                        <img class="gif" src="img/gif/unicorn.gif">
-                    </div>
-                    <div class="col-sm-6 col-md-3">
-                        <img class="gif" src="img/gif/chicken.gif">
-                    </div>
+            <div class="col-md-12 col-lg-12">
 
-                </div>
+                <h4>Appeal for donations to help affected people in recent flooding in Nepal</h4>
+                <p>
+
+                    As we all know by now, various parts of Nepal is hit hard by the floods and landslides triggered by incessant torrential rainfall recently. Jhapa, Sunsari, Morang, Saptari, Sarlahi, bara, Makawanpur, Sindhuli, Chitwan, Rautahat, Shanusa, Dang, Banke, Bardiya, and Surkhet are worst hit districts.
+                </p>
+                <p>
+                    As of election result, we would like to congratulate and wish on behalf of the outgoing executive committee to the newly elected executive team for successful tenure to come. NNZFSC Excom 2016-2018
+                </p>
+
+                <a href="#" class="btn btn-primary">Read More </a>
+            </div>
+
+
+            <!--<div class="col-lg-6">
+                <img src="img/desk.png" class="img-fluid">
+            </div>-->
+        </div>
+    </div>
+    <hr class="my-4">
+    <!--- Fixed background -->
+    <figure>
+        <div class="fixed-wrap">
+            <div id="fixed">
             </div>
         </div>
+    </figure>
 
-        <!--- Meet the team -->
+    <!--- Emoji Section -->
+    <button class="fun" data-toggle="collapse" data-target="#emoji">Click for Upcomming Events </button>
+    <div id="emoji" class="collapse">
         <div class="container-fluid padding">
-            <div class="row welcome text-center">
+            <div class="row text-center">
+                <div class="col-sm-6 col-md-3">
+                    <img class="gif" src="img/gif/panda.gif">
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <img class="gif" src="img/gif/poo.gif">
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <img class="gif" src="img/gif/unicorn.gif">
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <img class="gif" src="img/gif/chicken.gif">
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!--- Meet the team -->
+    <div class="container-fluid padding">
+        <div class="row welcome text-center">
+            <div class="col-12">
+                <h1 class="display-4">NNZFSC </h1>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <!--- Cards -->
+    <div class="container-fluid padding">
+        <div class="row padding">
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="img/Namaste2018Cover.png">
+                    <div clas="card-body">
+                        <h4 class="card-title">Namaste Nepal - Magazine : Issue 11 </h4>
+                        <p class="card-text"> NNZFSC is pleased to announce the publication of 11th edition of Namaste Nepal Magazine on 1 April, 2018 </p>
+                        <a href="#" class="btn btn-outline-secondary">Click here to read the 2018 publication. </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="img/NewYearFinalPoster.jpg">
+                    <div clas="card-body">
+                        <h4 class="card-title">Nepali New Year 2075 B.S </h4>
+                        <p class="card-text"> Nepali New year is just around the corner. This year we will be celebrating it on Nepali New Year's Eve day which is 13th April 2018 and will be doing the countdown together to welcome a fresh year! We hope all of you will be a part of this celebrations</p>
+                        <a href="#" class="btn btn-outline-secondary">Read More </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="img/Thcup.png">
+                    <div clas="card-body">
+                        <h4 class="card-title">TENZING HILLARY CUP AND YUWA SAANJH 2018 </h4>
+                        <p class="card-text"> The time has come again for the biggest Nepalese sporting event in NZ. This Inter Nepalese Football Tournament has been renamed as Tenzing-Hillary Cup since last year.</p>
+                        <a href="#" class="btn btn-outline-secondary">Read More </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!--- Two Column Section -->
+    <!--- Connect -->
+    <div class="container-fluid padding">
+        <div class="row text-center padding">
+            <div class="col-12">
+                <h2>Connect </h2>
+            </div>
+            <div class="col-12 social padding">
+                <a href="#" <i class= "fab fa-facebook"></i></a>
+                <a href="#" <i class= "fab fa-twitter"></i></a>
+                <a href="#" <i class= "fab fa-google-plus-g"></i></a>
+                <a href="#" <i class= "fab fa-instagram"></i></a>
+                <a href="#" <i class= "fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </div>
+    <!--- Footer -->
+    <footer>
+        <div class="container-fluid padding">
+            <div class="row text-center">
+
                 <div class="col-12">
-                    <h1 class="display-4">NNZFSC </h1>
-                </div>
-                <hr>
-            </div>
-        </div>
-        <!--- Cards -->
-        <div class="container-fluid padding">
-            <div class="row padding">
-                <div class="col-md-4">
-                    <div class="card">
-                        <img class="card-img-top" src="img/Namaste2018Cover.png">
-                        <div clas="card-body">
-                            <h4 class="card-title">Namaste Nepal - Magazine : Issue 11 </h4>
-                            <p class="card-text"> NNZFSC is pleased to announce the publication of 11th edition of Namaste Nepal Magazine on 1 April, 2018 </p>
-                            <a href="#" class="btn btn-outline-secondary">Click here to read the 2018 publication. </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card">
-                        <img class="card-img-top" src="img/NewYearFinalPoster.jpg">
-                        <div clas="card-body">
-                            <h4 class="card-title">Nepali New Year 2075 B.S </h4>
-                            <p class="card-text"> Nepali New year is just around the corner. This year we will be celebrating it on Nepali New Year's Eve day which is 13th April 2018 and will be doing the countdown together to welcome a fresh year! We hope all of you will be a part of this celebrations</p>
-                            <a href="#" class="btn btn-outline-secondary">Read More </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card">
-                        <img class="card-img-top" src="img/Thcup.png">
-                        <div clas="card-body">
-                            <h4 class="card-title">TENZING HILLARY CUP AND YUWA SAANJH 2018 </h4>
-                            <p class="card-text"> The time has come again for the biggest Nepalese sporting event in NZ. This Inter Nepalese Football Tournament has been renamed as Tenzing-Hillary Cup since last year.</p>
-                            <a href="#" class="btn btn-outline-secondary">Read More </a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <!--- Two Column Section -->
-        <!--- Connect -->
-        <div class="container-fluid padding">
-            <div class="row text-center padding">
-                <div class="col-12">
-                    <h2>Connect </h2>
-                </div>
-                <div class="col-12 social padding">
-                    <a href="#" <i class= "fab fa-facebook"></i></a>
-                    <a href="#" <i class= "fab fa-twitter"></i></a>
-                    <a href="#" <i class= "fab fa-google-plus-g"></i></a>
-                    <a href="#" <i class= "fab fa-instagram"></i></a>
-                    <a href="#" <i class= "fab fa-youtube"></i></a>
+                    <hr class="light">
+                    <h5>&copy; created and design by Avi Acharya</h5>
                 </div>
             </div>
         </div>
-        <!--- Footer -->
-        <footer>
-            <div class="container-fluid padding">
-                <div class="row text-center">
 
-                    <div class="col-12">
-                        <hr class="light">
-                        <h5>&copy; created and design by Avi Acharya</h5>
-                    </div>
-                </div>
-            </div>
-
-        </footer>
+    </footer>
 </body>
 </html>
 
