--- a/NNZFSC/Views/RegisterMember/Create.cshtml
+++ b/NNZFSC/Views/RegisterMember/Create.cshtml
@@ -6,22 +6,6 @@
 }
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-@*<script type="text/javascript">
-    $(document).ready(function () {
-    $('#MembershipDate').change(function () {
-     
-        var MembershipDate = this.value;
-        alert(MembershipDate);
-     
-        $.post("/RegisterMember/GetExpirydate", { date: MembershipDate },
-        function (data) {
-            $('#MembershipExpiryDate').val;
-        })
-        
-    });
-    });
-</script>*@
-
 <script type="text/javascript">
         $(document).ready(function () {
             //$("#txtEmail").first().focus();
@@ -60,7 +44,7 @@
     @Html.AntiForgeryToken()
 
     <div class="container">
-        <h1>Registration Form</h1>
+        <h1 class="display-4">Registration Form</h1>
         <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="row">
                 <form>
@@ -96,10 +80,10 @@
                         
                         <div class="row">
                             <div class="col-md-12 ">
-                                @Html.LabelFor(model => model.MemberAddress)
+                                <div> @Html.LabelFor(model => model.MemberAddress)</div>
 
                                 @*@Html.TextAreaFor(m => m.MemberAddress, new { @class = "form-control" })*@
-                                @Html.TextAreaFor(model => model.MemberAddress, 9, 40, htmlAttributes: new { style = "width: 80%; max-width: 80%; margin-left:-45px; margin-top:15px;" })
+                                @Html.TextAreaFor(model => model.MemberAddress, 9, 20, htmlAttributes: new { style = "max-width: 85%; width: 85%;" })
                             </div>
                             </div>
 
@@ -134,7 +118,13 @@
                                 </div>
 
                             </div>
+                        <div class="row">
 
+                            <div class="col-md-12 form-group">
+                                <input type="submit" value="save" class="btn btn-success" />
+                              
+                            </div>
+                        </div>
 
                         </div>
                 </form>
