--- a/NNZFSC/Views/Shared/_Layout.cshtml
+++ b/NNZFSC/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/nnzfsc_logo.jpg" width="60" height="60"></a>
+            <a class="navbar-brand" href="#"><img src="~/img/nnzfsc_logo.jpg" width="60" height="60"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
