--- a/NNZFSC/Views/Shared/_Layout.cshtml
+++ b/NNZFSC/Views/Shared/_Layout.cshtml
@@ -42,28 +42,29 @@
                     data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
+            <div class="collapse navbar-collapse" id="navbarResponsive" style="margin-left:-20px;">
+                <ul class="navbar-nav ml-auto ">
                     <li class="nav-item">
-                        <a class="nav-link" @Html.ActionLink("Home", "Index", "Home")</a>
+                         @Html.ActionLink("Home", "Index", "Home", new {@class="nav-link" })
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" @Html.ActionLink("About", "About", "Home")</a>
+                        @Html.ActionLink("About", "About", "Home",new {@class="nav-link" })
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" @Html.ActionLink("Events", "About", "Home")</a>
+                         @Html.ActionLink("Events", "About", "Home" ,new {@class="nav-link" })
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" @Html.ActionLink("Contact", "About", "Home")</a>
+                         @Html.ActionLink("Contact", "About", "Home", new { @class = "nav-link" })
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" @Html.ActionLink("Contact", "About", "Home")</a>
+                         @Html.ActionLink("Contact", "About", "Home", new { @class = "nav-link" })
                     </li>
                 </ul>
-               
+
             </div>
-             @Html.Partial("_LoginPartial")
-        </div>
+            <div>
+                @Html.Partial("_LoginPartial")
+            </div>
     </nav>
 
 
