fixed the routing bug

--- a/NNZFSC/Views/Shared/_LoginPartial.cshtml
+++ b/NNZFSC/Views/Shared/_LoginPartial.cshtml
@@ -16,8 +16,10 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account",new { @class = "nav-link", id= "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account",new { @class = "nav-link", @id="loginLink" })</li>
+       
+        <li>@Html.ActionLink("Register", "Register", "Account", null, new { @class = "nav-link", id = "registerLink" })</li>
+        <li>@Html.ActionLink("Log in", "Login", "Account", null, new { @class = "nav-link", @id = "loginLink" })</li>
+
 
      </ul>
 }
