--- a/NNZFSC/Views/Shared/_Layout.cshtml
+++ b/NNZFSC/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive" style="margin-left:-20px;">
                 <ul class="navbar-nav ml-auto ">
                     <li class="nav-item">
-                         @Html.ActionLink("Home", "Index", "Home", new {@class="nav-link" })
+                         @Html.ActionLink("Home", "Index", "Home",null, new { @class = "nav-link" })
                     </li>
                     <li class="nav-item">
                         @Html.ActionLink("About", "About", "Home",new {@class="nav-link" })
