Adding Payment Details View in UI
-Create a Editable MVC grid view to update Renew payment

--- a/NNZFSC/Views/RegisterMember/index.cshtml
+++ b/NNZFSC/Views/RegisterMember/index.cshtml
@@ -92,7 +92,7 @@
                     @*@Html.ActionLink("Renew", "Edit", new { id = item.MemberId }) |*@
                     @Html.ActionLink(
                                     linkText: "Renew",
-                                    actionName: "Edit",
+                                    actionName: "Create",
                                     controllerName: "Payment",
                                     routeValues: new
                                     {
