--- a/NNZFSC/Views/Payment/Create.cshtml
+++ b/NNZFSC/Views/Payment/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model NNZFSC.Models.MemberPayment
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-md-4" style="border-right:outset">
 
-                <div class="text-center" >
+                <div class="text-center">
 
                     <img src="~/img/NNZFSC_Logo.jpg" class="avatar img-circle" alt="avatar" height="150" width="150">
                 </div>
@@ -23,37 +23,37 @@
                 <div class="text-center">
                     @Html.LabelFor(model => model.MemberDetails.MemberId, htmlAttributes: new { @class = "control-label col-md-4" })
                     @Html.TextBoxFor(model => model.MemberDetails.MemberId, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
-                
+                  
                 </div>
                 <br />
                 <div class="text-center">
-                    @Html.LabelFor(model => model.MemberDetails.MemberFirstName , htmlAttributes: new { @class = "control-label col-md-4" })
-                    @Html.TextBoxFor(model => model.MemberDetails.MemberFirstName, new {@class= "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
+                    @Html.LabelFor(model => model.MemberDetails.MemberFirstName, htmlAttributes: new { @class = "control-label col-md-4" })
+                    @Html.TextBoxFor(model => model.MemberDetails.MemberFirstName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
                   
                 </div>
                 <br />
                 <div class="text-center">
                     @Html.LabelFor(model => model.MemberDetails.MemberMiddleName, htmlAttributes: new { @class = "control-label col-md-4" })
                     @Html.TextBoxFor(model => model.MemberDetails.MemberMiddleName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
-                   
+                
                 </div>
                 <br />
                 <div class="text-center">
                     @Html.LabelFor(model => model.MemberDetails.MemberLastName, htmlAttributes: new { @class = "control-label col-md-4" })
                     @Html.TextBoxFor(model => model.MemberDetails.MemberLastName, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
-                   
+                 
                 </div>
                 <br />
                 <div class="text-center">
                     @Html.LabelFor(model => model.MemberDetails.MemberAddress, htmlAttributes: new { @class = "control-label col-md-4" })
                     @Html.TextBoxFor(model => model.MemberDetails.MemberAddress, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
-                  
+                
                 </div>
                 <br />
                 <div class="text-center">
                     @Html.LabelFor(model => model.MemberDetails.EmailAddress, htmlAttributes: new { @class = "control-label col-md-4" })
                     @Html.TextBoxFor(model => model.MemberDetails.EmailAddress, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
-                  
+                
                 </div>
                 <br />
                 <div class="text-center">
@@ -66,7 +66,7 @@
                 <div class="text-center">
                     @Html.LabelFor(model => model.NextPaymentDate, htmlAttributes: new { @class = "control-label col-md-4" })
                     @Html.TextBoxFor(model => model.NextPaymentDate, new { @class = "form-control", @readonly = true, style = "width: 45%; display:inline-block;" })
-                   
+                  
                 </div>
 
 
@@ -78,7 +78,7 @@
                 <div class="form-group">
 
                     @Html.LabelFor(model => model.PaymentDate, htmlAttributes: new { @class = "control-label col-md-4" })
-                    @Html.EditorFor(model => model.PaymentDate , new { htmlAttributes = new { @class = "form-control col-md-4" } })
+                    @Html.EditorFor(model => model.PaymentDate, new { htmlAttributes = new { @class = "form-control col-md-4" } })
                     @Html.ValidationMessageFor(model => model.PaymentDate, "", new { @class = "text-danger" })
 
                 </div>
@@ -96,11 +96,11 @@
                     @Html.ValidationMessageFor(model => model.PaymentAmount, "", new { @class = "text-danger" })
 
                 </div>
-               <div class="form-group">
+                <div class="form-group">
                     <div class="col-md-offset-2 col-md-4">
                         <input type="submit" value="Save" class="btn btn-success" />
                     </div>
-            </div>
+                </div>
 
 
 
@@ -111,7 +111,9 @@
 
     </div>
 
-    }
+}
+
+
 
 <div>
     @Html.ActionLink("Back to List", "Index")
