Tidy up the Payment details UI

--- a/NNZFSC/Views/Payment/Edit.cshtml
+++ b/NNZFSC/Views/Payment/Edit.cshtml
@@ -114,5 +114,6 @@
     }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink(linkText: "Back to List", actionName: "index", controllerName: "RegisterMember")
+                                   
 </div>
