--- a/NNZFSC/Views/Payment/Create.cshtml
+++ b/NNZFSC/Views/Payment/Create.cshtml
@@ -116,5 +116,5 @@
 
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink(linkText: "Back to List", actionName: "index", controllerName: "RegisterMember")
 </div>
